# Wrish

./: .gitignore  LICENSE  README.md
.github/workflows/: release-tauri.yml  release.yml
Wrish/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Wrish.csproj
wrish-tauri/: Cargo.toml  tauri.conf.json
wrish-tauri/src/: index.html  main.js  main.rs  styles.css
