[package]
name = "wrish-tauri"
version = "1.0.0"
description = "A minimal immersive writing tool for Windows"
authors = ["Wrish Contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"